--- a/garage2.html
+++ b/garage2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head><link rel="manifest" href="manifest.json">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Garage Manager</title>
 <style>
@@ -71,3 +71,4 @@ render()
 
 </body>
 </html>
+
